fix(UI): Clarify search bar text (#1131)
Co-authored-by: c0d1ng_ma5ter <joshua-pim2223@makademy.com.mx>

--- a/config/i18n/locales/english/translations.json
+++ b/config/i18n/locales/english/translations.json
@@ -8,11 +8,11 @@
     "label": "Search",
     "accessible-name": "Submit your search query",
     "placeholder": {
-      "default": "Search our tutorials",
-      "numbered": "Search {{ roundedTotalRecords }}+ tutorials"
+      "default": "Search our news articles, tutorials, and books",
+      "numbered": "Search {{ roundedTotalRecords }}+ news articles, tutorials, and books"
     },
     "see-results": "See all results for {{ searchQuery }}",
-    "no-tutorials": "No tutorials found"
+    "no-results": "No results found"
   },
   "banner": {
     "default": "Learn to code — {{ <0> }}free 3,000-hour curriculum{{ </0> }}",
