feat: add Hashnode link

--- a/config/i18n/locales/english/translations.json
+++ b/config/i18n/locales/english/translations.json
@@ -76,6 +76,7 @@
     "mobile-app": "Mobile App",
     "our-nonprofit": "Our Charity",
     "links": {
+      "powered-by": "Publication powered by Hashnode",
       "about": "About",
       "alumni": "Alumni Network",
       "open-source": "Open Source",
