--- a/config/i18n/locales/english/links.json
+++ b/config/i18n/locales/english/links.json
@@ -13,5 +13,9 @@
     "support": "https://www.freecodecamp.org/news/support/",
     "honesty": "https://www.freecodecamp.org/news/academic-honesty-policy/",
     "coc": "https://www.freecodecamp.org/news/code-of-conduct/"
+  },
+  "nav": {
+    "forum": "https://forum.freecodecamp.org/",
+    "learn": "https://www.freecodecamp.org/learn"
   }
 }
