--- a/config/i18n/locales/japanese/links.json
+++ b/config/i18n/locales/japanese/links.json
@@ -1,12 +1,12 @@
 {
   "forum": "https://forum.freecodecamp.org/c/japanese/552",
+  "learn": "https://www.freecodecamp.org/japanese/learn",
   "donate": "https://www.freecodecamp.org/japanese/donate",
   "banner": {
     "default": "https://www.freecodecamp.org/japanese/",
     "authenticated": "https://www.freecodecamp.org/japanese/donate",
     "authenticated-donor": "https://www.freecodecamp.org/japanese/news/how-to-donate-to-free-code-camp/"
   },
-  "learn-to-code-cta": "https://www.freecodecamp.org/japanese/learn",
   "twitter": "https://twitter.com/freecodecampJA",
   "footer": {
     "about": "https://www.freecodecamp.org/japanese/news/about/",
