--- a/config/i18n/locales/italian/links.json
+++ b/config/i18n/locales/italian/links.json
@@ -1,13 +1,13 @@
 {
   "forum": "https://forum.freecodecamp.org/c/italiano/535",
-  "donate": "https://www.freecodecamp.org/italian/donate/",
+  "learn": "https://www.freecodecamp.org/italian/learn",
+  "donate": "https://www.freecodecamp.org/italian/donate",
   "banner": {
     "default": "https://forum.freecodecamp.org/t/contribuire-a-tradurre-freecodecamp-in-italiano/479009/",
     "authenticated": "https://www.freecodecamp.org/italian/donate",
     "authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
   },
-  "learn-to-code-cta": "https://www.freecodecamp.org/italian/learn/",
-  "twitter": "https://twitter.com/freecodecampit",
+  "twitter": "https://twitter.com/freeCodeCampIT",
   "footer": {
     "about": "https://www.freecodecamp.org/italian/news/faq/",
     "support": "https://www.freecodecamp.org/italian/news/domande-frequenti-supporto-tecnico-freecodecamp-faq/",
