--- a/config/i18n/locales/korean/links.json
+++ b/config/i18n/locales/korean/links.json
@@ -1,13 +1,13 @@
 {
   "forum": "https://forum.freecodecamp.org/",
+  "learn": "https://www.freecodecamp.org/learn",
   "donate": "https://www.freecodecamp.org/donate/",
   "banner": {
     "default": "https://www.freecodecamp.org/",
     "authenticated": "https://www.freecodecamp.org/donate",
     "authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
   },
-  "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
-  "twitter": "https://twitter.com/freecodecamp",
+  "twitter": "https://x.com/freeCodeCampKO",
   "footer": {
     "about": "https://www.freecodecamp.org/news/about/",
     "support": "https://www.freecodecamp.org/news/support/",
