--- a/config/i18n/locales/portuguese/links.json
+++ b/config/i18n/locales/portuguese/links.json
@@ -1,12 +1,12 @@
 {
   "forum": "https://forum.freecodecamp.org/c/portugues/534",
-  "donate": "https://www.freecodecamp.org/portuguese/donate/",
+  "learn": "https://www.freecodecamp.org/portuguese/learn",
+  "donate": "https://www.freecodecamp.org/portuguese/donate",
   "banner": {
     "default": "discord.gg/PRyKn3Vbay",
     "authenticated": "https://www.freecodecamp.org/portuguese/donate",
     "authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
   },
-  "learn-to-code-cta": "https://www.freecodecamp.org/portuguese/learn/",
   "twitter": "https://twitter.com/freecodecampPT",
   "footer": {
     "about": "https://www.freecodecamp.org/portuguese/news/sobre-o-freecodecamp-perguntas-frequentes/",
