chore: remove french and urdu strings from english translation.json file

--- a/config/i18n/locales/english/translations.json
+++ b/config/i18n/locales/english/translations.json
@@ -59,13 +59,11 @@
       "chinese": "Chinese",
       "english": "English",
       "espanol": "Spanish",
-      "french": "French",
       "italian": "Italian",
       "japanese": "Japanese",
       "korean": "Korean",
       "portuguese": "Portuguese",
-      "ukrainian": "Ukrainian",
-      "urdu": "Urdu"
+      "ukrainian": "Ukrainian"
     }
   },
   "embed-title": "Embedded content",
