--- a/config/i18n/locales/espanol/links.json
+++ b/config/i18n/locales/espanol/links.json
@@ -7,7 +7,7 @@
     "authenticated": "https://www.freecodecamp.org/espanol/donate",
     "authenticated-donor": "https://www.freecodecamp.org/espanol/news/how-to-donate-to-free-code-camp/"
   },
-  "twitter": "https://twitter.com/freeCodeCampES",
+  "twitter": "https://twitter.com/freecodecampes",
   "footer": {
     "about": "https://www.freecodecamp.org/espanol/news/acerca-de-freecodecamp-preguntas-frecuentes/",
     "support": "https://www.freecodecamp.org/espanol/news/preguntas-comunes-de-soporte-tecnico/",
