fix: update x.com links to older twitter.com links for consistency

--- a/config/i18n/locales/korean/links.json
+++ b/config/i18n/locales/korean/links.json
@@ -7,7 +7,7 @@
     "authenticated": "https://www.freecodecamp.org/donate",
     "authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
   },
-  "twitter": "https://x.com/freeCodeCampKO",
+  "twitter": "https://twitter.com/freeCodeCampKO",
   "footer": {
     "about": "https://www.freecodecamp.org/news/about/",
     "support": "https://www.freecodecamp.org/news/support/",
