--- a/config/i18n/locales/espanol/links.json
+++ b/config/i18n/locales/espanol/links.json
@@ -1,12 +1,12 @@
 {
   "forum": "https://forum.freecodecamp.org/c/espanol/522",
-  "donate": "https://www.freecodecamp.org/espanol/donate/",
+  "learn": "https://www.freecodecamp.org/espanol/learn",
+  "donate": "https://www.freecodecamp.org/espanol/donate",
   "banner": {
     "default": "https://www.freecodecamp.org/espanol",
     "authenticated": "https://www.freecodecamp.org/espanol/donate",
     "authenticated-donor": "https://www.freecodecamp.org/espanol/news/how-to-donate-to-free-code-camp/"
   },
-  "learn-to-code-cta": "https://www.freecodecamp.org/espanol/learn/",
   "twitter": "https://twitter.com/freecodecampes",
   "footer": {
     "about": "https://www.freecodecamp.org/espanol/news/acerca-de-freecodecamp-preguntas-frecuentes/",
