--- a/config/i18n/locales/ukrainian/links.json
+++ b/config/i18n/locales/ukrainian/links.json
@@ -1,13 +1,13 @@
 {
-  "forum": "https://forum.freecodecamp.org/",
-  "donate": "https://www.freecodecamp.org/donate/",
+  "forum": "https://forum.freecodecamp.org/c/ukrainian/569",
+  "learn": "https://www.freecodecamp.org/ukrainian/learn",
+  "donate": "https://www.freecodecamp.org/ukrainian/donate",
   "banner": {
-    "default": "https://www.freecodecamp.org/",
-    "authenticated": "https://www.freecodecamp.org/donate",
+    "default": "https://www.freecodecamp.org/ukrainian",
+    "authenticated": "https://www.freecodecamp.org/ukrainian/donate",
     "authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
   },
-  "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
-  "twitter": "https://twitter.com/freecodecamp",
+  "twitter": "https://twitter.com/freeCodeCampUK",
   "footer": {
     "about": "https://www.freecodecamp.org/news/about/",
     "support": "https://www.freecodecamp.org/news/support/",
