feat: create a functional dark mode

--- a/config/i18n/locales/english/translations.json
+++ b/config/i18n/locales/english/translations.json
@@ -4,7 +4,8 @@
     "donate": "Donate",
     "load-more-articles": "Load More Articles",
     "menu": "Menu",
-    "learn": "Curriculum"
+    "learn": "Curriculum",
+    "toggle-dark-mode": "Night Mode"
   },
   "search": {
     "label": "Search",
